--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
   android:versionCode="1"
   android:versionName="1.0" >
 
-  <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="17"/>
+  <uses-sdk android:minSdkVersion="8"/>
 
   <application
     android:icon="@drawable/ic_launcher"
@@ -16,12 +16,6 @@
 
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
-    </activity>
-    <activity
-      android:name=".CrimeActivity"
-      android:label="@string/app_name" >
-      <meta-data android:name="android.support.PARENT_ACTIVITY"
-        android:value=".CrimeListActivity"/>
     </activity>
     <activity android:name=".CrimePagerActivity"
       android:label="@string/app_name">
