--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,9 @@
   android:versionCode="1"
   android:versionName="1.0" >
 
-  <uses-sdk android:minSdkVersion="8"/>
+  <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="17"/>
+  <uses-permission android:name="android.permission.CAMERA" />
+  <uses-feature android:name="android.hardware.camera" />
 
   <application
     android:icon="@drawable/ic_launcher"
@@ -22,6 +24,11 @@
       <meta-data android:name="android.support.PARENT_ACTIVITY"
         android:value=".CrimeListActivity"/>
     </activity>
+      <activity android:name=".CrimeCameraActivity"
+                android:exported="true"
+                android:screenOrientation="landscape"
+                android:label="@string/app_name"/>
+
   </application>
 
 </manifest>
